Fix caption images on small width
So, they auto-scale down to 100% width

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -93,4 +93,5 @@ body {
 /* shrink these containers to the image width */
 .captionImageContainer, .captionImage {
     width: max-content;
+    max-width: 100%;
 }
